# ros2_caso_practico

./: README.md
src/emulador_glosa/: CMakeLists.txt  package.xml
src/emulador_glosa/launch/: emulador_glosa_launch.py
src/emulador_glosa/src/: controlVehiculo.cpp  gestorVelocidad.cpp  managerSemaforo.cpp  planificadorRuta.cpp
src/interfaces_personalizadas/: CMakeLists.txt  package.xml
src/interfaces_personalizadas/msg/: EventoVial.msg  VelocidadMeta.msg
src/interfaces_personalizadas/src/: publicadorSimple.cpp
src/interfaces_personalizadas/srv/: EstadoSemaforo.srv
