<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>emulador_glosa</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="innovare@todo.todo">innovare</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencias del nodo -->
  <depend>rclcpp</depend>
  <depend>interfaces_personalizadas</depend>

  <!-- Agregar para usar launch file -->
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
