<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interfaces_personalizadas</name>
  <version>0.0.0</version>
  <description>Package con mensajes y servicios personalizados para uso externo e interno</description>
  <maintainer email="robotica@innovare2025.onmicrosoft.com">innovare</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <!-- Dependencias del nodo -->
  <depend>rclcpp</depend>

  <!-- Agregar para poder generar mensajes -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
